--- a/index.html
+++ b/index.html
@@ -75,25 +75,25 @@
             <div class="course-card">
                 <img src="./images/r1.jpg">
                 <div class="inside-content">
-                    <h2>Trending Destinations</h2>
+                    <h2>Trending Places</h2>
                 </div>
             </div>
             <div class="course-card">
                 <img src="./images/r2.jpg">
                 <div class="inside-content">
-                    <h2>Nature Destinations</h2>
+                    <h2>Nature Places</h2>
                 </div>
             </div>
             <div class="course-card">
                 <img src="./images/r3.jpg">
                 <div class="inside-content">
-                    <h2>Food Destinations</h2>
+                    <h2>Food Places</h2>
                 </div>
             </div>
             <div class="course-card">
                 <img src="./images/r4.jpg">
                 <div class="inside-content">
-                    <h2>Culture Destinations</h2>
+                    <h2>Culture Places</h2>
                 </div>
             </div>
         </div>
